Add assignment landing: Candidate Onwubuali Kingsley, staging link and notes

--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Staging — Full Name</title>
-    <style>
-      body { font-family: Arial, sans-serif; max-width: 780px; margin: 6rem auto; color: #222 }
-      header { text-align: center; margin-bottom: 2rem }
-      a.button { display: inline-block; margin-top: 1rem; padding: .6rem 1rem; background:#0366d6; color:#fff; text-decoration:none; border-radius:6px }
-    </style>
-  </head>
-  <body>
-    <header>
-      <h1>Staging submission</h1>
-      <h2>Full Name: &lt;Your Full Name&gt;</h2>
-    </header>
-    <main>
-      <p>This is a simple staging landing page for the WordPress project submission.</p>
-      <p>
-        Documentation: <a href="Documentation.pdf" class="button">Download PDF</a>
-      </p>
-      <section>
-        <h3>Notes for reviewer</h3>
-        <ul>
-          <li>The full WordPress project repository is available on GitHub.</li>
-          <li>Please refer to the attached documentation for setup and credentials.</li>
-        </ul>
-      </section>
-    </main>
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Delta Growth Assignment — Onwubuali Kingsley</title>
+		<style>
+			body { font-family: Arial, sans-serif; max-width: 900px; margin: 4rem auto; color: #222; padding: 0 1rem }
+			header { text-align: center; margin-bottom: 2rem }
+			a.button { display: inline-block; margin-top: 1rem; padding: .6rem 1rem; background:#0366d6; color:#fff; text-decoration:none; border-radius:6px }
+			.meta { background:#f7f7f9;border:1px solid #eee;padding:1rem;border-radius:8px }
+		</style>
+	</head>
+	<body>
+		<header>
+			<h1>Delta Growth Assignment</h1>
+			<h2>Candidate: Onwubuali Kingsley</h2>
+		</header>
+
+		<main>
+			<section class="meta">
+				<p><strong>Staging Link:</strong> <a href="https://delta-growth.gt.tc/">https://delta-growth.gt.tc/</a></p>
+				<p><strong>Notes:</strong> This project was built using Elementor, WooCommerce, ACF, WPForms and LiteSpeed Cache.</p>
+				<p>The documentation file is included in this repository: <a href="Documentation.pdf">Documentation.pdf</a></p>
+			</section>
+
+			<section style="margin-top:1.5rem;">
+				<h3>Reviewer Instructions</h3>
+				<ul>
+					<li>Visit the staging link above to review the live site.</li>
+					<li>Open the documentation for setup steps, credentials and notes.</li>
+				</ul>
+			</section>
+		</main>
+	</body>
 </html>
