Update documentation link and remove placeholder PDF

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<section class="meta">
 				<p><strong>Staging Link:</strong> <a href="https://delta-growth.gt.tc/">https://delta-growth.gt.tc/</a></p>
 				<p><strong>Notes:</strong> This project was built using Elementor, WooCommerce, ACF, WPForms and LiteSpeed Cache.</p>
-				<p>The documentation file is included in this repository: <a href="Documentation.pdf">Documentation.pdf</a></p>
+				<p>The documentation file is included in this repository: <a href="document/delta_growth_documentation_v3.pdf">Documentation.pdf</a></p>
 			</section>
 
 			<section style="margin-top:1.5rem;">
